// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templatemark interpreter should fail to generate formula-invalid 1`] = `
Array [
  Object {
    "code": " THIS IS GARBAGE ",
    "errors": Array [
      Object {
        "category": 1,
        "character": 3,
        "code": 2304,
        "id": "err-2304-321-4",
        "length": 4,
        "line": 6,
        "renderedMessage": "Cannot find name 'THIS'.",
        "start": 1304,
      },
      Object {
        "category": 1,
        "character": 8,
        "code": 2304,
        "id": "err-2304-326-2",
        "length": 2,
        "line": 6,
        "renderedMessage": "Cannot find name 'IS'.",
        "start": 1309,
      },
      Object {
        "category": 1,
        "character": 11,
        "code": 2304,
        "id": "err-2304-329-7",
        "length": 7,
        "line": 6,
        "renderedMessage": "Cannot find name 'GARBAGE'.",
        "start": 1312,
      },
      Object {
        "category": 1,
        "character": 3,
        "code": 1435,
        "id": "err-1435-321-4",
        "length": 4,
        "line": 6,
        "renderedMessage": "Unknown keyword or identifier. Did you mean 'this'?",
        "start": 1304,
      },
      Object {
        "category": 1,
        "character": 8,
        "code": 1434,
        "id": "err-1434-326-2",
        "length": 2,
        "line": 6,
        "renderedMessage": "Unexpected keyword or identifier.",
        "start": 1309,
      },
    ],
    "nodeId": "formula_adef0feb9fc1b6e7513409c93d86aa4d9999d35608e1aaeecc07dca99bc591c8",
  },
]
`;

exports[`templatemark interpreter should fail to generate formula-no-method 1`] = `
Array [
  Object {
    "code": " return message.missing() ",
    "errors": Array [
      Object {
        "category": 1,
        "character": 18,
        "code": 2339,
        "id": "err-2339-336-7",
        "length": 7,
        "line": 6,
        "renderedMessage": "Property 'missing' does not exist on type 'string'.",
        "start": 1319,
      },
    ],
    "nodeId": "formula_4ef52e3adc6e5334e0925838eed0e51a372091d9b3a4499537ccf82fce5b1b25",
  },
]
`;

exports[`templatemark interpreter should fail to generate formula-optional-noguard 1`] = `
Array [
  Object {
    "code": " return message.length ",
    "errors": Array [
      Object {
        "category": 1,
        "character": 10,
        "code": 18048,
        "id": "err-18048-328-7",
        "length": 7,
        "line": 6,
        "renderedMessage": "'message' is possibly 'undefined'.",
        "start": 1312,
      },
    ],
    "nodeId": "formula_a3e0e90a2ad3601e1b208a0581e1ce6dfc5aab302d20cb2a0488d78e236096f7",
  },
]
`;

exports[`templatemark interpreter should fail to generate template-missing-field 1`] = `[TemplateException: Unknown property: missing File text/grammar.tem.md line -1 column -1]`;

exports[`templatemark interpreter should generate clause 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Address",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "elementType": "test@1.0.0.Address",
          "name": "address",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Street: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                  "elementType": "String",
                  "name": "street",
                  "value": "1 Main Street",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate formula-now 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Hello ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "message",
              "value": "World",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "! Today is ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_f0bf5a79ebf5383c600fde8b5741509daa86e1c85d4f4572d5564ec65a1b8e3a",
                  "value": "2023-03-17T00:00:00.000Z",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": ".",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate full 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "1",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Welcome!",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Hello ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "firstName",
              "value": "Dan",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Tenzin-Isaac-Mia",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
              "isTrue": true,
              "name": "lastName",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Mister",
                },
              ],
              "whenFalse": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Dude",
                },
              ],
              "whenTrue": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Mister",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "!",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Middle Names",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "delimiter": "period",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "elementType": "String",
                      "name": "this",
                      "value": "Tenzin",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "elementType": "String",
                      "name": "this",
                      "value": "Isaac",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "elementType": "String",
                      "name": "this",
                      "value": "Mia",
                    },
                  ],
                },
              ],
            },
          ],
          "start": "1",
          "tight": "true",
          "type": "ordered",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Middle names: ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Tenzin, Isaac, and Mia",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Address",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "elementType": "test@1.0.0.Address",
          "name": "address",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.List",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "text": "Street: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "street",
                          "value": "1 Main Street",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "text": "City: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "city",
                          "value": "Boston",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "text": "ZIP: ",
                        },
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "zip",
                          "value": "12345",
                        },
                      ],
                    },
                  ],
                },
              ],
              "tight": "true",
              "type": "bullet",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Your city is: ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Emph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Strong",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "city",
                          "value": "Boston",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": ".",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Account Status",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
              "isTrue": false,
              "name": "active",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account has been deactivated.",
                },
              ],
              "whenFalse": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account has been deactivated.",
                },
              ],
              "whenTrue": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your account is active.",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Thank you for visiting us ",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Strong",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                      "dependencies": Array [],
                      "name": "formula_53113a901ca88208df47bc83374866e8d497d84099c0f88123c918ff1960b17e",
                      "value": "66",
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": " days ago.",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Linebreak",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your last visit was: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.FormattedVariable",
                  "elementType": "DateTime",
                  "format": "MM/DD/YYYY",
                  "name": "lastVisit",
                  "value": "01/10/2023",
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": ".",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Formula",
              "dependencies": Array [],
              "name": "formula_7841bd178366af21ea233d10968eaf538d12fb7a50cbaf9cbe1b51a00cb0f6a8",
              "value": "[123 : Dan Selman][234 : Isaac Selman][456 : Tenzin Selman][789 : Mi-a Selman]",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Orders",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "delimiter": "period",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Strong",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "sku",
                          "value": "WIDGET-2000",
                        },
                      ],
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": " : ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Emph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "Integer",
                          "name": "amount",
                          "value": "10",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Strong",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "sku",
                          "value": "DOODAH-X",
                        },
                      ],
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": " : ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Emph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "Integer",
                          "name": "amount",
                          "value": "3",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
          "start": "1",
          "tight": "true",
          "type": "ordered",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Optional",
              "elementType": "test@1.0.0.LoyaltyStatus",
              "hasSome": false,
              "name": "loyaltyStatus",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "You do not have a loyalty status.",
                },
              ],
              "whenNone": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "You do not have a loyalty status.",
                },
              ],
              "whenSome": Array [],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.ciceromark@0.6.0.Clause",
          "elementType": "test@1.0.0.Preferences",
          "name": "preferences",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Heading",
              "level": "2",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Favorite Colors",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "Your favorite colors are: ",
                },
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_4b8f7e95470eda90057c4648aac4e4c7abb3f93559ed348246b6a15ec1fea473",
                  "value": "RED and PINK",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Image",
                  "destination": "https://www.litmus.com/wp-content/uploads/2021/02/motion-tween-example.gif",
                  "nodes": Array [],
                  "title": "",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.List",
              "delimiter": "period",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "this",
                          "value": "RED",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Item",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                      "nodes": Array [
                        Object {
                          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                          "elementType": "String",
                          "name": "this",
                          "value": "PINK",
                        },
                      ],
                    },
                  ],
                },
              ],
              "start": "1",
              "tight": "true",
              "type": "ordered",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
                  "isTrue": true,
                  "name": "favoriteColors",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "You like pink!",
                    },
                  ],
                  "whenFalse": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Why don't you like PINK!",
                    },
                  ],
                  "whenTrue": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "You like pink!",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Dynamic Query of Clauses",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Onboarding Clauses",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_a8a1d7714d95baa82f730e0105d2f2d0a9fc25ee9b6055058cc09667c01c01ab",
                  "value": "[{\\"category\\":\\"onboarding\\",\\"author\\":\\"Peter\\",\\"body\\":\\"Legal stuff\\",\\"risk\\":2.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Authored by ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "firstName",
              "value": "Dan",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_daca9cb2f5bc16b65f544e6f408c1e3121d50a3251ec4fbe2f27132818acc3d2",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Dad jokes\\",\\"risk\\":8.95},{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Programming for fun and profit\\",\\"risk\\":1.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "High Risk",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_4c874b2977b5eef204e4987efc0a5594c7cce66403e54c17daa1e1c721d755a0",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Dad jokes\\",\\"risk\\":8.95},{\\"category\\":\\"offboarding\\",\\"author\\":\\"Matt\\",\\"body\\":\\"All goodness\\",\\"risk\\":4.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Low Risk and authored by ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "firstName",
              "value": "Dan",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_646a6cadec2125e4fd9e4b756aac72bc618b528967f04d325b28a817774441dd",
                  "value": "[{\\"category\\":\\"reference\\",\\"author\\":\\"Dan\\",\\"body\\":\\"Programming for fun and profit\\",\\"risk\\":1.95}]",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Done.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate headings 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "1",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Heading One",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Heading Two",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "3",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Heading Three",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "4",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Heading Four",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "5",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Heading Five",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "6",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Heading Six",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate helloformula 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Hello ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "message",
              "value": "World",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "! Your name is ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.ciceromark@0.6.0.Formula",
                  "dependencies": Array [],
                  "name": "formula_a3e0e90a2ad3601e1b208a0581e1ce6dfc5aab302d20cb2a0488d78e236096f7",
                  "value": "5",
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " characters long.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate helloworld 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Hello ",
            },
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "message",
              "value": "World",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": ".",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate insurance 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "If your ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "CAR, ACCESSORIES, and SPARE_PARTS",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " are ",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "DAMAGED, LOST or STOLEN",
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": ", we will:",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Pay up to ",
                    },
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.FormattedVariable",
                      "elementType": "org.accordproject.money@0.3.0.MonetaryAmount",
                      "format": "0,0.00 K",
                      "name": "limit",
                      "value": "1,500.00 €",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": " towards the cost of ",
                    },
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.EnumVariable",
                      "elementType": "com.acme.insurance.auto@1.0.0.BenefitType",
                      "enumValues": Array [
                        "REPAIRING",
                        "REPLACING",
                      ],
                      "name": "benefitType",
                      "value": "REPAIRING",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": " the damages",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Pay up to ",
                    },
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.FormattedVariable",
                      "elementType": "org.accordproject.money@0.3.0.MonetaryAmount",
                      "format": "0,0.00 K",
                      "name": "limit",
                      "value": "500.00 €",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": " towards the cost of ",
                    },
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.EnumVariable",
                      "elementType": "com.acme.insurance.auto@1.0.0.BenefitType",
                      "enumValues": Array [
                        "REPAIRING",
                        "REPLACING",
                      ],
                      "name": "benefitType",
                      "value": "REPLACING",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": " the damages",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate join 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "en Locale",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Style",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Narrow: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, and SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Short: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, & SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Disjunction",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, or SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Unit",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "en-GB Locale",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Style",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Narrow: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES and SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Short: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES and SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Disjunction",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES or SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Unit",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "fr Locale",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Style",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Narrow: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES, SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES et SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Short: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES et SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Disjunction",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES ou SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Unit",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Long: ",
                    },
                    Object {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "CAR, ACCESSORIES et SPARE_PARTS",
                    },
                  ],
                },
              ],
            },
          ],
          "tight": "true",
          "type": "bullet",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate list 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Middle Names",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.List",
          "delimiter": "period",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "elementType": "String",
                      "name": "this",
                      "value": "Tenzin",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "elementType": "String",
                      "name": "this",
                      "value": "Isaac",
                    },
                  ],
                },
              ],
            },
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Item",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
                  "nodes": Array [
                    Object {
                      "$class": "org.accordproject.ciceromark@0.6.0.Variable",
                      "elementType": "String",
                      "name": "this",
                      "value": "Mia",
                    },
                  ],
                },
              ],
            },
          ],
          "start": "1",
          "tight": "true",
          "type": "ordered",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate optional 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.ciceromark@0.6.0.Optional",
              "elementType": "test@1.0.0.LoyaltyStatus",
              "hasSome": false,
              "name": "loyaltyStatus",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "You do not have a loyalty status.",
                },
              ],
              "whenNone": Array [
                Object {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "You do not have a loyalty status.",
                },
              ],
              "whenSome": Array [],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Done.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`templatemark interpreter should generate paragraph 1`] = `
Object {
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "This is some text.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;
